# Aichemy

./: .gitignore  MANIFEST.in  conda_env.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql.yml
ChemInf_0.2/: README.md  anaconda_env.yml  conda_env.yml  requirements.txt  setup.cfg  setup.py
ChemInf_0.2/cheminf/: __main__.py
ChemInf_0.2/cheminf/config/: classifiers.ini  execute.ini
ChemInf_0.2/cheminf/libs/nonconformist/: base.py  cp.py
ChemInf_0.2/cheminf/libs/torchtools/nn/: __init__.py
ChemInf_0.2/cheminf/libs/torchtools/optim/: lamb.py  novograd.py  radam.py  ralamb.py
ChemInf_0.2/cheminf/source/: cheminf_classifier.py  cheminf_data_utils.py  cheminf_lib.py  cheminf_main.py  cheminf_models.py
ChemInf_0.2/cheminf/src/: cheminf_models.py
ChemInf_0.2/cheminf/src/cheminf/: classifiers.py  controller.py  main.py  model.py  models.py  operator.py  post-processing.py  postprocessing.py  preprocessing.py  utils.py
ChemInf_0.2/scripts/: assign-multiclass-ls-compress.py  cheminf_aggregate_models.sh  cheminf_data_utils.py  cheminf_mcnemar_test.py  cheminf_nn_prediction_postprocessing.py  cheminf_plot_energy_hist.py  cheminf_plot_energy_hist_sep_files.py  cheminf_plot_summary.py  cheminf_summarize_pred.py  label_data.sh  labeling.py  make_combine_plots.py  morgan_features.py  run_cheminf_build_parallel.sh  run_cheminf_data_balancing.sh  run_cheminf_data_utils_multicore_test.sh  run_cheminf_debug.sh  run_cheminf_predict_parallel.sh
ChemInf_0.2/scripts/slurm/: sbatch_cheminf_auto.sh  sbatch_cheminf_auto_different_inputs.sh  sbatch_cheminf_auto_randomized.sh  sbatch_cheminf_build_predict.sh  sbatch_cheminf_build_predict_no_preproc.sh  sbatch_cheminf_build_predict_noise.sh  sbatch_cheminf_labeling.sh  sbatch_cheminf_predict.sh  sbatch_cheminf_preproc.sh  sbatch_data_labeling.sh  sbatch_labeling.sh  submit_cheminf_auto.sh  submit_cheminf_build_predict_rndfor.sh  submit_cheminf_build_rndfor.sh  submit_cheminf_data_balancer.sh  submit_cheminf_data_balancer_bash.sh  submit_cheminf_mem_test_nn.sh  submit_cheminf_predict_rndfor.sh  submit_cheminf_summaries_rndfor.sh  submit_cheminf_validate_rndfor.sh
ChemInf_0.2/scripts/slurm/projects/: inv_nn_different_sampling_setup.csv  inv_nn_same_sampling_setup.csv  investigate_nn_different_input_setup.txt  investigate_nn_same_input_setup.txt
ChemInf_0.2/tests/: __main__.py  generate_tests.sh  generate_tests_multithread.sh  test_utils.py
ChemInf_0.2/tests/integrations/: all_modules.py  classifiers_module.py  model_module.py  operator_module.py  postprocessing_module.py  preprocessing_module.py
ChemInf_0.2/tests/units/: test_tests_integrations_all_modules_failing.py
aichemy/: LICENSE.txt  __main__.py  classifiers.py  controller.py  models.py  operator.py  postprocessing.py  preprocessing.py  utils.py
version_0.1/: conda_env.yml
version_0.1/cheminf/: __main__.py
version_0.1/cheminf/config/: execute.ini
version_0.1/cheminf/libs/nonconformist/: acp.py  evaluation.py  icp.py  nc.py
version_0.1/cheminf/libs/torchtools/: __init__.py
version_0.1/cheminf/libs/torchtools/nn/: adain.py  gp_loss.py  perceptual.py  simple_self_attention.py  vq.py
version_0.1/cheminf/libs/torchtools/nn/functional/: __init__.py
version_0.1/cheminf/libs/torchtools/optim/: __init__.py  lookahead.py
version_0.1/cheminf/src/cheminf/: classifiers.py  controller.py  operator.py  postprocessing.py  preprocessing.py
version_0.1/scripts/slurm/: sbatch_cheminf_auto_different_inputs.sh  sbatch_cheminf_preproc.sh  sbatch_labeling.sh
version_0.1/scripts/slurm/projects/: inv_nn_different_sampling_setup.csv  inv_nn_same_sampling_setup.csv
