[tool.poetry]
name = "aichemy"
version = "0.1.1"
description = "A conformal prediction classifier for immensely large molecular libraries"
authors = ["Daniel Ågstrand <d.e.agstrand@gmail.com>"]
repository = "https://github.com/IG-AI/AIchemy"
license = "Attribution-NonCommercial-NoDerivatives 4.0 International"
readme = "README.md"
keywords = [
    "Classifier",
    "Neural Network",
    "Molecular Classification",
    "Conformal Prediction"
]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
packages = [
    { include = "aichemy" },
]
include = [
    "README.md",
    "LICENSE.txt",
    "config/*",
    "data/"
]

[tool.poetry.dependencies]
python = "^3.8"
panda = "^0.3.1"
numpy = "^1.22.0"
matplotlib = "^3.3.3"
torch = "^1.7.1"
skorch = "^0.9.0"
lz4 = "^3.1.1"
icu = "^0.0.1"
mkl = "^2021.1.1"
poetry = "^1.1.9"
nonconformist = {git = "https://github.com/donlnz/nonconformist"}
torchtools = {git = "https://github.com/pabloppp/pytorch-tools"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
