[metadata]
name = ChemInf
description = Conformal predictor framework for molecules
version = attr:cheminf.__version__
authors = attr:cheminf.__authors__
email = attr:cheminf.__email__
url = attr:cheminf.__url__
platform = attr:cheminf.__platform__
packages = find:
package_dir =
	cheminf
package_data =
	cheminf: cheminf/data/cheminf_models/, cheminf/data/cheminf_predictions/
data_files =
	config: [config/classifier.ini]
	config: [config/execute.ini]
long_description = file:README.md
license = file:LICENSE.txt

[build_sphinx]
source-dir = /
build-dir = /build
all_files = 1

[build-system]
requires =
	setuptools
	wheel
build-backend = setuptools.build_meta

[options]
zip_safe = false
include_package_data = true
python_requires ~= 3.8
install_requires =
	panda>=0.3.1
	numpy>=1.19.4
	matplotlib>=3.3.3
	torch>=1.7.1
	skorch>=0.9.0
	lz4>=3.1.1
	icu>=0.0.1
	mkl>=2021.1.1
	nonconformist={git = "https://github.com/donlnz/nonconformist"}
	torchtools={git = "https://github.com/pabloppp/pytorch-tools"}

[options.packages.find]
where=cheminf

[options.entry_points]
console_scripts = cheminf=cheminf.__main__

[install]
prefix=/
install_lib=/cheminf/libs
install_scripts=/cheminf/scripts/build