[metadata]
name = Aichemy
description = Conformal predictor framework for molecules
version = attr:aichemy.__version__
authors = attr:aichemy.__authors__
email = attr:aichemy.__email__
url = attr:aichemy.__url__
platform = attr:aichemy.__platform__
packages = find:
package_dir =
	aichemy
data_files =
	config: [config/classifier.ini]
	config: [config/execute.ini]
long_description = file:README.md
license = file:aichemy/LICENSE.txt
classifiers =
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps."

[build-system]
requires =
  "setuptools >= 40.9.0",
  "wheel",
build-backend = "setuptools.build_meta"

[options]
zip_safe = false
include_package_data = true
python_requires ~= 3.8
dependency_links =
	https://github.com/donlnz/nonconformist
	https://github.com/pabloppp/pytorch-tools
install_requires =
	panda >= 0.3.1
	numpy >= 1.19.4
	matplotlib >= 3.3.3
	torch >= 1.7.1
	skorch >= 0.9.0
	lz4 >= 3.1.1
	icu >= 0.0.1
	mkl >= 2021.1.1
	tensorboardx >= 2.1
	cloudpickle ~= 1.6.0
	scipy ~= 1.5.2

[options.packages.find]
where=aichemy

[options.entry_points]
console_scripts = aichemy=aichemy.__main__:main
