[metadata]
name = ChemInf
description = Conformal predictor framework for molecules
version = attr: cheminf.__version__
url = https://github.com/leosparring/ChemInf/tree/master/ChemInf_0.2
platform = Unix
packages = find:
package_dir =
	cheminf
package_data =
	cheminf: cheminf/data/cheminf_models/, cheminf/data/cheminf_predictions/
data_files =
	config: [config/classifier.ini]
long_description = file:README.md
license = file:LICENSE.txt

[build_sphinx]
source-dir = doc/
build-dir = doc/_build
all_files = 1

[build-system]
requires =
	setuptools
	wheel
build-backend = setuptools.build_meta

[options]
zip_safe = false
include_package_data = true
python_requires = ~= 3.8
install_requires =
	blas>=1.0
	ca-certificates>=2020.10.0
	certifi>=2020.6.20
	cloudpickle>=1.5.0
	cudatoolkit>=11.0.0
	dataclasses>=0.0
	freetype>=2.10.0
	intel-openmp>=2020.0
	joblib>=0.17.0
	jpeg>=9
	lcms2>=2.0
	ld_impl_linux-64>=2.33.0
	libedit>=3.1.0
	libffi>=3.0
	libgcc-ng>=9.1.0
	libgfortran-ng>=7.3.0
	libpng>=1.6.0
	libprotobuf>=3.13.0.0
	libstdcxx-ng>=9.1.0
	libtiff>=4.1.0
	libuv>=1.40.0
	lz4-c>=1.9.0
	mkl>=2019.0
	mkl-service>=2.3.0
	mkl_fft>=1.2.0
	mkl_random>=1.1.0
	ncurses>=6.0
	ninja>=1.10.0
	numpy>=1.19.0
	numpy-base>=1.19.0
	olefile>=0.46
	openssl>=1.1.0
	pandas>=1.1.0
	pillow>=8.0.0
	pip>=20.0.0
	protobuf>=4.0.0
	python~=3.8
	python-dateutil>=2.8.0
	pytorch>=1.7.0
	pytz>=2020.0
	readline>=8.0
	scikit-learn>=0.23.0
	scipy>=1.5.0
	six>=1.15.0
	skorch==0.8.0
	sqlite>=3.33.0
	tabulate>=0.8.0
	tensorboardx>=2.1
	threadpoolctl>=2.1.0
	tk>=8.6.10
	torchvision>=0.8.0
	tqdm>=4.51.0
	typing_extensions>=3.7.4.0
	xz>=5.2.0
	zlib>=1.2.0
	zstd>=1.4.5.0

[options.packages.find]
where=cheminf

[options.entry_points]
console_scripts = cheminf=cheminf.__main__:main

[install]
prefix=/
install_lib=/cheminf/libs/
install_scripts=/cheminf/bin/path